--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,8 +1,7 @@
 # DATABASE CONFIGURATION
-#spring.datasource.url=jdbc:mysql://localhost:3306/betpawa
-#spring.datasource.username=root
-#spring.datasource.password=root
-
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
+
+# log hibernate requests
+logging.level.org.hibernate.SQL=DEBUG
