--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'java'
+    id 'net.ltgt.apt' version '0.9'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -27,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
+    compile 'org.mapstruct:mapstruct:1.3.0.Final', 'org.mapstruct:mapstruct-processor:1.3.0.Final'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
